--- a/main.html
+++ b/main.html
@@ -13,25 +13,157 @@
 
     <body>
         <header>
-            <div>Old Foreman</div>
 
-            <nav id="menu" class="col-md-4 col-sm-5 col-xs-11 menu">
-            <button class="menu-toggle menu-btn-close" aria-label="Закрыть меню">⨉</button>
-            <div>
+            <!-- <div class="main__header">
+                <div class="top__header">
+                    <div class="container-fluid">
+                        <div class="top__header-inner">
+                            <div class="top__contacts">
+                                <div class="top__contacts-list">
+                                    <div class="top__contacts-item">
+                                        <a href="ссылка на тг" class="top__contacts-link" rel="nofollow" title="Telegram">
+                                            <svg class="icon icon-telegram">
+                                                <use xlink:href="#icon-telegram"></use>
+                                            </svg>
+                                        </a>
+                                    </div>
+                                    <div class="top__contacts-item">
+
+                                    </div>
+                                    <div class="top__contacts-item"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>     -->
+
+            <div><b>Old Foreman</b></div>
+
+            <!-- <nav id="menu" class="col-md-4 col-sm-5 col-xs-11 menu">
+            <button class="menu-toggle menu-btn-close" aria-label="Закрыть меню">⨉</button> -->
+            <!-- <div>
                 <a href="">
                     <svg>
                         <use xlink:href="#icon-cart"></use>
                     </svg>
                 </a></div>
-            </nav>
+            </nav> -->
         </header>
+
         <main>
+            <div class="block"><img src="src/home_img.png" class="img_man"></div>
+
+            <div class="home__main_field">
+                <div class="home__categories-header"><b>Категории</b></div>
+
+                <div class="home__categories-list">
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Обложки">
+                                    <img src="src/oblozhki.jpg" alt="Обложки">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Обложки</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Вазы">
+                                    <img src="src/vazy.jpg" alt="Вазы">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Вазы</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Складни и иконы">
+                                    <img src="src/skladni-i-ikony.jpg" alt="Складни и иконы">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Складни и иконы</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Молитвословы">
+                                    <img src="src/molitvoslovy.jpg" alt="Молитвословы">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Молитвословы</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Настолные игры">
+                                    <img src="src/nastolnieigry.jpg" alt="Настолные игры">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Настольные  игры</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Водочные стопки">
+                                    <img src="src/vodostochnie-stopki.jpg" alt="Водочные стопки">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Водочные стопки</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Ложки">
+                                    <img src="src/logki.jpg" alt="Ложки">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Ложки</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="home__categories-item">
+                        <div class="hcategory__item">
+                            <div class="hcategory__item-image">
+                                <a href="" title="Штофы и графины">
+                                    <img src="src/shtofy-i-grafiny.jpg" alt="Штофы и графины">
+                                </a>
+                            </div>
+                            <div class="hcategory__item-name">
+                                <a href="">Штофы и графины</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </main>
+
     </body>
 
 
     <footer>
-
+        <div>Мы <s>не</s> перекупы</div>
     </footer>
 </html>
