--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         </header>
 
         <main>
-            <div class="block"><img src="src/home_img.png" class="img_man"></div>
+            <div class="man_img"><img src="src/home_img.png" class="img_man"></div>
+            <div class="man_mob_img"><img src="src/man_mob_img.png"></div>
 
             <div class="home__main_field">
                 <div class="home__categories-header"><b>Категории</b></div>
