--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
     </head>
 
     <body>
+        <svg style="display:none">
+            <symbol id="icon-tg" viewBox="0 0 35 35" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M15.5 6C10.2536 6 6 10.2536 6 15.5C6 20.7464 10.2536 25 15.5 25C20.7464 25 25 20.7464 25 15.5C25 10.2536 20.7464 6 15.5 6ZM19.9033 12.4608C19.7608 13.9626 19.1417 17.6082 18.8274 19.2905C18.6944 20.003 18.4315 20.2413 18.1782 20.2643C17.6264 20.3149 17.2076 19.8993 16.6733 19.5494C15.8373 19.0015 15.3646 18.6603 14.5532 18.1252C13.615 17.5069 14.223 17.1673 14.7574 16.6123C14.8975 16.4666 17.328 14.2555 17.3755 14.0552C17.381 14.0299 17.3873 13.9365 17.3311 13.8874C17.2749 13.8383 17.1934 13.8549 17.1348 13.8684C17.0509 13.8874 15.7153 14.7701 13.1274 16.5165C12.7482 16.777 12.4046 16.9036 12.0966 16.8973C11.7578 16.8902 11.1055 16.7057 10.6202 16.5474C10.0256 16.3542 9.55221 16.2513 9.59338 15.9235C9.61475 15.7525 9.84988 15.5776 10.2995 15.3987C13.0688 14.1922 14.9158 13.3965 15.8396 13.0118C18.4783 11.9145 19.0261 11.7238 19.3839 11.7174C19.832 11.7111 19.9397 12.0808 19.9033 12.4608Z" fill="white"/>
+            </symbol>
+        </svg>
+        <svg style="display:none">
+            <symbol id="icon-heart" viewBox="0 0 32 32" fill="none">
+                <path stroke-width="2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M16.827 27.747c-0.453 0.16-1.2 0.16-1.653 0-3.867-1.32-12.507-6.827-12.507-16.16 0-4.12 3.32-7.453 7.413-7.453 2.427 0 4.573 1.173 5.92 2.987 1.347-1.813 3.507-2.987 5.92-2.987 4.093 0 7.413 3.333 7.413 7.453 0 9.333-8.64 14.84-12.507 16.16z" fill="white"/>
+            </symbol>
+        </svg>
         <header>
 
-            <!-- <div class="main__header">
+            <div class="main__header">
                 <div class="top__header">
                     <div class="container-fluid">
                         <div class="top__header-inner">
@@ -23,7 +33,7 @@
                                     <div class="top__contacts-item">
                                         <a href="ссылка на тг" class="top__contacts-link" rel="nofollow" title="Telegram">
                                             <svg class="icon icon-telegram">
-                                                <use xlink:href="#icon-telegram"></use>
+                                                <use xlink:href="#icon-tg"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -33,12 +43,25 @@
                                     <div class="top__contacts-item"></div>
                                 </div>
                             </div>
+                            <div class="top__logo">
+                                <b>Old Foreman</b>
+                            </div>
+                            <div class="top__actions">
+                                <div class="top__actions-list">
+                                    <div class="top__actions-item">
+                                        <a href="Избранное" class="top__actions-link">
+                                            <svg class="icon icon-heart">
+                                                <use xlink:href="#icon-heart"></use>
+                                            </svg>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>     -->
+            </div>    
 
-            <div><b>Old Foreman</b></div>
 
             <!-- <nav id="menu" class="col-md-4 col-sm-5 col-xs-11 menu">
             <button class="menu-toggle menu-btn-close" aria-label="Закрыть меню">⨉</button> -->
