--- a/app/pages/home/index.html
+++ b/app/pages/home/index.html
@@ -24,7 +24,7 @@
         </svg>
         <svg style="display:none">
             <symbol id="icon-cart" viewBow="0 0 32 32" fill="none">
-                <path stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" d="M11.747 2.667l-4.827 4.84"/><path stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" d="M20.253 2.667l4.827 4.84"/><path stroke-width="2" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M2.667 10.467c0-2.467 1.32-2.667 2.96-2.667h20.747c1.64 0 2.96 0.2 2.96 2.667 0 2.867-1.32 2.667-2.96 2.667h-20.747c-1.64 0-2.96 0.2-2.96-2.667z"/><path stroke-width="2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M13.013 18.667v4.733"/><path stroke-width="2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M19.147 18.667v4.733"/><path stroke-width="2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M4.667 13.333l1.88 11.52c0.427 2.587 1.453 4.48 5.267 4.48h8.040c4.147 0 4.76-1.813 5.24-4.32l2.24-11.68"/>
+                <path fill-rule="evenodd" stroke-width="0.9" d="M7 6v-.5a3.5 3.5 0 1 1 7 0V6h3v13H4V6h3Zm1-.5a2.5 2.5 0 0 1 5 0V6H8v-.5ZM7 7v1.5h1V7h5v1.5h1V7h2v11H5V7h2Z" clip-rule="evenodd"></path>
             </symbol>
         </svg>
         <header>
@@ -63,7 +63,7 @@
                                     <div class="top__actions-item">
                                         <a href="Корзина" class="top__actions-link">
                                             <svg class="icon icon-cart">
-                                                <use xlink:href="#icon-cart" width="10" height="10"></use>
+                                                <use xlink:href="#icon-cart" width="20" height="20"></use>
                                             </svg>
                                         </a>
                                     </div>
